--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./pics/iconos/font/flaticon.css">
 </head>
 <body>
+    <!-- HEADER -->
     <header>
         <img src="./pics/equis.svg" alt="X">
         <nav class="nav">
@@ -33,11 +34,17 @@
             </ul>
         </div>
     </header>
-
     <main>
-
+        <div class="carrusel">
+            <div class="carrusel__container">
+                <div class="carrusel__item1"></div>
+                <div class="carrusel__item2"></div>
+                <div class="carrusel__item3"></div>
+                <div class="carrusel__item4"></div>
+            </div>
+        </div>
     </main>
-
+    <!-- FOOTER -->
     <footer>
         <div class="xetras">
             Xetras ®
