se agregan botones del carrusel (sin funcionalidad)

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                 <div class="carrusel__item4"></div>
             </div>
         </div>
+        <div class="icon-container">
+            <figure class="carrusel__icon point1"></figure>
+            <figure class="carrusel__icon point2"></figure>
+            <figure class="carrusel__icon point3"></figure>
+            <figure class="carrusel__icon point4"></figure>
+        </div>
     </main>
     <!-- FOOTER -->
     <footer>
