se agrego funcionalidad a los botones

--- a/index.html
+++ b/index.html
@@ -36,18 +36,19 @@
     </header>
     <main>
         <div class="carrusel">
-            <div class="carrusel__container">
+            <div class="carrusel__container" id="carrusel">
                 <div class="carrusel__item1"></div>
                 <div class="carrusel__item2"></div>
                 <div class="carrusel__item3"></div>
                 <div class="carrusel__item4"></div>
             </div>
+            <figure class="playpause" id="boton__carrusel-playpause"></figure>
         </div>
         <div class="icon-container">
-            <figure class="carrusel__icon point1"></figure>
-            <figure class="carrusel__icon point2"></figure>
-            <figure class="carrusel__icon point3"></figure>
-            <figure class="carrusel__icon point4"></figure>
+            <figure class="carrusel__icon point1" id="boton__carrusel-uno"></figure>
+            <figure class="carrusel__icon point2" id="boton__carrusel-dos"></figure>
+            <figure class="carrusel__icon point3" id="boton__carrusel-tres"></figure>
+            <figure class="carrusel__icon point4" id="boton__carrusel-cuatro"></figure>
         </div>
     </main>
     <!-- FOOTER -->
@@ -64,5 +65,7 @@
             <i class="flaticon-instagram"></i>
         </div>
     </footer>
+
+    <script src="./script.js"></script>
 </body>
 </html>
