se agrego y ubico en grid: barra de busqueda, novedades y lanzamientos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xetras</title>
+    <title>XGame Store</title>
     <link rel="stylesheet" href="./style.css">
     <!-- Imagen en el titulo -->
     <link rel="shortcut icon" href="./pics/equis.svg">
@@ -35,26 +35,35 @@
         </div>
     </header>
     <main>
-        <div class="carrusel">
-            <div class="carrusel__container" id="carrusel">
+        <section class="section-one">
+            <input type="search" name="" id="barra-busqueda" class="section-one__barra-busqueda">
+            <div class="carrusel">
+                <div class="carrusel__container" id="carrusel">
                 <div class="carrusel__item1"></div>
                 <div class="carrusel__item2"></div>
                 <div class="carrusel__item3"></div>
                 <div class="carrusel__item4"></div>
+                </div>
+                <figure class="playpause" id="boton__carrusel-playpause"></figure>
             </div>
-            <figure class="playpause" id="boton__carrusel-playpause"></figure>
-        </div>
-        <div class="icon-container">
-            <figure class="carrusel__icon point1" id="boton__carrusel-uno"></figure>
-            <figure class="carrusel__icon point2" id="boton__carrusel-dos"></figure>
-            <figure class="carrusel__icon point3" id="boton__carrusel-tres"></figure>
-            <figure class="carrusel__icon point4" id="boton__carrusel-cuatro"></figure>
-        </div>
+            <div class="icon-container">
+                <figure class="carrusel__icon point1" id="boton__carrusel-uno"></figure>
+                <figure class="carrusel__icon point2" id="boton__carrusel-dos"></figure>
+                <figure class="carrusel__icon point3" id="boton__carrusel-tres"></figure>
+                <figure class="carrusel__icon point4" id="boton__carrusel-cuatro"></figure>
+            </div>
+            <article class="popular-container">
+                HOLA
+            </article>
+            <article class="releases-container"> 
+                Hola
+            </article>
+        </section>
     </main>
     <!-- FOOTER -->
     <footer>
         <div class="xetras">
-            Xetras ®
+            XGame ®
         </div>
         <div class="nosotros">
             <a href="">Sobre Nosotros</a>
