se agrego diseño a barra de busqueda

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="shortcut icon" href="./pics/equis.svg">
     <!-- Link de la fuente -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./pics/iconos/font/flaticon.css">
 </head>
 <body>
@@ -36,7 +37,10 @@
     </header>
     <main>
         <section class="section-one">
-            <input type="search" name="" id="barra-busqueda" class="section-one__barra-busqueda">
+            <div class="search-container" id="search-container">
+                <input type="search" name="" placeholder="buscar" id="barra-busqueda" class="section-one__barra-busqueda">
+                <span class="material-icons">search</span>
+            </div>
             <div class="carrusel">
                 <div class="carrusel__container" id="carrusel">
                 <div class="carrusel__item1"></div>
