Se agrego y se estilo la seccion de juegos populares

--- a/index.html
+++ b/index.html
@@ -57,10 +57,73 @@
                 <figure class="carrusel__icon point4" id="boton__carrusel-cuatro"></figure>
             </div>
             <article class="popular-container">
-                HOLA
+                <h2>POPULARES</h2>
+                <div class="game-rating-container">
+                    <figure class="game-image game1"></figure>
+                    <div class="rating-card card--crash">
+                        <a href="#">Crash Bandicoot N. Sane Trilogy</a>
+                        <div class="user-rate">
+                            <span class="material-icons users" title="Users Rate">group</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star_half</span>
+                        </div>
+                        <div class="xgame-rate">
+                            <figure class="xgame"><img src="./pics/equis.svg" alt="XGame" title="XGame Rate"></figure>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star_half</span>
+                            <span class="material-icons star--empty">star_outline</span>
+                        </div>
+                    </div>
+                    <figure class="game-image game2"></figure>
+                    <div class="rating-card card--minecraft">
+                        <a href="#">Minecraft</a>
+                        <div class="user-rate">
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons users" title="Users Rate">group</span>
+                        </div>
+                        <div class="xgame-rate">
+                            <span class="material-icons star half-star--rotate">star_half</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <figure class="xgame"><img src="./pics/equis.svg" alt="XGame" title="XGame Rate"></figure>
+                        </div>
+                     </div>
+                    <figure class="game-image game3"></figure>
+                    <div class="rating-card card--warzone">
+                        <a href="#">Call of Duty: Warzone</a>
+                        <div class="user-rate">
+                            <span class="material-icons users" title="Users Rate">group</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star_half</span>
+                        </div>
+                        <div class="xgame-rate">
+                            <figure class="xgame"><img src="./pics/equis.svg" alt="XGame" title="XGame Rate"></figure>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star">star</span>
+                            <span class="material-icons star--empty">star_outline</span>
+                        </div>
+                    </div>
+                    
+                </div>
             </article>
             <article class="releases-container"> 
-                Hola
+                LANZAMIENTOS
             </article>
         </section>
     </main>
