se agrego seccion lanzamientos, estilado y funcionalidad de botones y grid de pestaña izquierda

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <div class="rating-card card--crash">
                         <a href="#">Crash Bandicoot N. Sane Trilogy</a>
                         <div class="user-rate">
-                            <span class="material-icons users" title="Users Rate">group</span>
+                            <span class="material-icons users" title="Valoración de los usuarios">group</span>
                             <span class="material-icons star">star</span>
                             <span class="material-icons star">star</span>
                             <span class="material-icons star">star</span>
@@ -71,7 +71,7 @@
                             <span class="material-icons star">star_half</span>
                         </div>
                         <div class="xgame-rate">
-                            <figure class="xgame"><img src="./pics/equis.svg" alt="XGame" title="XGame Rate"></figure>
+                            <figure class="xgame"><img src="./pics/equis.svg" alt="XGame" title="Valoración de XGame"></figure>
                             <span class="material-icons star">star</span>
                             <span class="material-icons star">star</span>
                             <span class="material-icons star">star</span>
@@ -88,7 +88,7 @@
                             <span class="material-icons star">star</span>
                             <span class="material-icons star">star</span>
                             <span class="material-icons star">star</span>
-                            <span class="material-icons users" title="Users Rate">group</span>
+                            <span class="material-icons users" title="Valoración de los usuarios">group</span>
                         </div>
                         <div class="xgame-rate">
                             <span class="material-icons star half-star--rotate">star_half</span>
@@ -96,14 +96,14 @@
                             <span class="material-icons star">star</span>
                             <span class="material-icons star">star</span>
                             <span class="material-icons star">star</span>
-                            <figure class="xgame"><img src="./pics/equis.svg" alt="XGame" title="XGame Rate"></figure>
+                            <figure class="xgame"><img src="./pics/equis.svg" alt="XGame" title="Valoración de XGame"></figure>
                         </div>
                      </div>
                     <figure class="game-image game3"></figure>
                     <div class="rating-card card--warzone">
                         <a href="#">Call of Duty: Warzone</a>
                         <div class="user-rate">
-                            <span class="material-icons users" title="Users Rate">group</span>
+                            <span class="material-icons users" title="Valoración de los usuarios">group</span>
                             <span class="material-icons star">star</span>
                             <span class="material-icons star">star</span>
                             <span class="material-icons star">star</span>
@@ -111,7 +111,7 @@
                             <span class="material-icons star">star_half</span>
                         </div>
                         <div class="xgame-rate">
-                            <figure class="xgame"><img src="./pics/equis.svg" alt="XGame" title="XGame Rate"></figure>
+                            <figure class="xgame"><img src="./pics/equis.svg" alt="XGame" title="Valoración de XGame"></figure>
                             <span class="material-icons star">star</span>
                             <span class="material-icons star">star</span>
                             <span class="material-icons star">star</span>
@@ -123,7 +123,45 @@
                 </div>
             </article>
             <article class="releases-container"> 
-                LANZAMIENTOS
+                <div class="realeses__button-container">
+                    <button class="releases__button button-new" id="boton-lanzamientos">NUEVOS LANZAMIENTOS</button>
+                    <button class="releases__button button-soon" id="boton-proximamente">PROXIMAMENTE</button>
+                </div>
+                <div class="new-games-container" id="new-games-container">
+                    <div class="new-games__game-target">
+                        <figure><img src="./pics/Juegos/chernobylite-1.jpg" alt="Chernobylite"></figure>
+                        <h3>Chernobylite</h3>
+                        <p>US$ 5.62</p>
+                    </div>
+                    <div class="new-games__game-target">
+                        <figure><img src="./pics/Juegos/chernobylite-1.jpg" alt="Chernobylite"></figure>
+                        <h3>Chernobylite</h3>
+                        <p>US$ 5.62</p>
+                    </div>
+                    <div class="new-games__game-target">
+                        <figure><img src="./pics/Juegos/chernobylite-1.jpg" alt="Chernobylite"></figure>
+                        <h3>Chernobylite</h3>
+                        <p>US$ 5.62</p>
+                    </div>
+                    <div class="new-games__game-target">
+                        <figure><img src="./pics/Juegos/chernobylite-1.jpg" alt="Chernobylite"></figure>
+                        <h3>Chernobylite</h3>
+                        <p>US$ 5.62</p>
+                    </div>
+                    <div class="new-games__game-target">
+                        <figure><img src="./pics/Juegos/chernobylite-1.jpg" alt="Chernobylite"></figure>
+                        <h3>Chernobylite</h3>
+                        <p>US$ 5.62</p>
+                    </div>
+                    <div class="new-games__game-target">
+                        <figure><img src="./pics/Juegos/chernobylite-1.jpg" alt="Chernobylite"></figure>
+                        <h3>Chernobylite</h3>
+                        <p>US$ 5.62</p>
+                    </div>
+                </div>
+                <div class="coming-soon-container" id="coming-soon-container">
+
+                </div>
             </article>
         </section>
     </main>
