terminado el article derecho con ambas pestañas funcionales en js

--- a/index.html
+++ b/index.html
@@ -127,12 +127,8 @@
                     <button class="releases__button button-new" id="boton-lanzamientos">NUEVOS LANZAMIENTOS</button>
                     <button class="releases__button button-soon" id="boton-proximamente">PROXIMAMENTE</button>
                 </div>
-                <div class="new-games-container" id="new-games-container">
-                    
-                </div>
-                <div class="coming-soon-container" id="coming-soon-container">
-
-                </div>
+                <div class="new-games-container" id="new-games-container"></div>
+                <div class="coming-soon-container" id="coming-soon-container"></div>
             </article>
         </section>
     </main>
