modificacion de position de navbar, footer y barra busqueda + javascript para cambio de opacidad

--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
         </div>
     </header>
     <main>
-        <section class="section-one">
+        <div class="search-section" id="search-section">
             <div class="search-container" id="search-container">
                 <input type="search" name="" placeholder="buscar" id="barra-busqueda" class="section-one__barra-busqueda">
                 <span class="material-icons">search</span>
             </div>
+        </div>
+        <section class="section-one">
             <div class="carrusel">
                 <div class="carrusel__container" id="carrusel">
                 <div class="carrusel__item1"></div>
