Se agrego y estilo la seccion de tiendas

--- a/index.html
+++ b/index.html
@@ -132,6 +132,11 @@
                 <div class="new-games-container" id="new-games-container"></div>
                 <div class="coming-soon-container" id="coming-soon-container"></div>
             </article>
+            <div class="shops-container">
+                <a href="https://store.playstation.com" target="_blank"><img src="./pics/Brands/ps4.png" alt="PlayStation 4"></a>
+                <a href="https://store.steampowered.com" target="_blank"><img src="./pics/Brands/steam.png" alt="Steam"></a>
+                <a href="https://www.xbox.com" target="_blank"><img src="./pics/Brands/xbox(1).png" alt="Xbox"></a>
+            </div>
         </section>
     </main>
     <!-- FOOTER -->
