Se remplazaron links locales de imagenes por links de host

--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
                 <div class="coming-soon-container" id="coming-soon-container"></div>
             </article>
             <div class="shops-container">
-                <a href="https://store.playstation.com" target="_blank"><img src="./pics/Brands/ps4.png" alt="PlayStation 4"></a>
-                <a href="https://store.steampowered.com" target="_blank"><img src="./pics/Brands/steam.png" alt="Steam"></a>
-                <a href="https://www.xbox.com" target="_blank"><img src="./pics/Brands/xbox(1).png" alt="Xbox"></a>
+                <a href="https://store.playstation.com" target="_blank"><img src="https://i.ibb.co/wM1PLDV/ps4.png" alt="PlayStation 4"></a>
+                <a href="https://store.steampowered.com" target="_blank"><img src="https://i.ibb.co/1m8BM4S/steam.png" alt="Steam"></a>
+                <a href="https://www.xbox.com" target="_blank"><img src="https://i.ibb.co/n0KqfZt/xbox-1.png" alt="Xbox"></a>
             </div>
         </section>
     </main>
