Se creo y estilo la sección 2

--- a/index.html
+++ b/index.html
@@ -16,32 +16,33 @@
 </head>
 <body>
     <!-- HEADER -->
-    <header>
-        <img src="./pics/equis.svg" alt="X">
-        <nav class="nav">
-            <ul class="nav__lista">
-                <li><a href="">Tienda</a></li>
-                <li><a href="">Promociones</a></li>
-                <li><a href="">Mis juegos</a></li>
-                <li><a href="">Soporte</a></li>
-            </ul>
-        </nav>
-        <div class="perfil">
-            <img class="perfil__imagen" src="./pics/person_black_24dp.svg" alt="profile">
-            <ul class="perfil__lista-desplegable">
-                <li><a href="">Perfil</a></li>
-                <li><a href="">Configuración</a></li>
-                <li><a href="">Cerrar Sesión</a></li>
-            </ul>
-        </div>
-    </header>
     <main>
+        <header>
+            <img src="./pics/equis.svg" alt="X">
+            <nav class="nav">
+                <ul class="nav__lista">
+                    <li><a href="">Tienda</a></li>
+                    <li><a href="">Promociones</a></li>
+                    <li><a href="">Mis juegos</a></li>
+                    <li><a href="">Soporte</a></li>
+                </ul>
+            </nav>
+            <div class="perfil">
+                <img class="perfil__imagen" src="./pics/person_black_24dp.svg" alt="profile">
+                <ul class="perfil__lista-desplegable">
+                    <li><a href="">Perfil</a></li>
+                    <li><a href="">Configuración</a></li>
+                    <li><a href="">Cerrar Sesión</a></li>
+                </ul>
+            </div>
+        </header>
         <div class="search-section" id="search-section">
             <div class="search-container" id="search-container">
                 <input type="search" name="" placeholder="buscar" id="barra-busqueda" class="section-one__barra-busqueda">
                 <span class="material-icons">search</span>
             </div>
         </div>
+        <!-- SECTION 1 -->
         <section class="section-one">
             <div class="carrusel">
                 <div class="carrusel__container" id="carrusel">
@@ -121,7 +122,6 @@
                             <span class="material-icons star--empty">star_outline</span>
                         </div>
                     </div>
-                    
                 </div>
             </article>
             <article class="releases-container"> 
@@ -136,6 +136,21 @@
                 <a href="https://store.playstation.com" target="_blank"><img src="https://i.ibb.co/wM1PLDV/ps4.png" alt="PlayStation 4"></a>
                 <a href="https://store.steampowered.com" target="_blank"><img src="https://i.ibb.co/1m8BM4S/steam.png" alt="Steam"></a>
                 <a href="https://www.xbox.com" target="_blank"><img src="https://i.ibb.co/n0KqfZt/xbox-1.png" alt="Xbox"></a>
+            </div>
+        </section>
+        <!-- SECTION 2 -->
+        <section class="section-two">
+            <div class="xpass">
+                <img src="./pics/equis.svg" alt="">
+                <h2>PASS</h2>
+            </div>
+            <div class="xpass-description">
+                <p>¡Vive la experiencia XGame!</p>
+                <p>Obten descuentos y contenido exclusivo de tus juegos favoritos.</p>
+                <p>Juega sin límites.</p>
+            </div>
+            <div class="xpass-link">
+                <a href="#">SUMATE</a>
             </div>
         </section>
     </main>
